<resources>
    <string name="app_name">Warehouse</string>
    <string name="no_data_in_query">"Запрос не вернул данные! \n Попробуйте еще раз."</string>

    <string name="login_error_msg_title">"Ошибка: "</string>
    <string name="login_error_msg_no_user">Не указано имя пользователя!</string>
    <string name="login_error_msg_no_password">Не указан пароль!</string>
    <string name="login_error_msg_no_server">Не выбран сервер!</string>
    <string name="login_error_msg_wrong_server">"Не доступен сервер "</string>
    <string name="login_error_msg_unavailable_server">"Не доступен MSSQL SERVER на сервере "</string>
    <string name="login_error_msg_wrong_user_password">"Не верно указан логин или пароль \n для соединения с MSSQL сервером "</string>
    <string name="login_error_msg_disconnect_from_server">"Соединение было прервано сервером "</string>
    <string name="login_textUser">Пользователь:</string>
    <string name="login_textEnter">Вход</string>
    <string name="login_textPassword">Пароль:</string>
    <string name="login_textServer">Сервер:</string>
    <string name="login_textRemember">Запомнить меня</string>
    <string name="login_editUser_hint">Имя пользователя</string>
    <string name="login_editPassword_hint">Пароль</string>
    <string name="login_buttonOk">Войти</string>
    <string name="login_buttonCancel">Выход</string>

    <string name="title_activity_main_menu">Главное меню</string>
    <string name="title_activity_update_document">Обновить документ</string>
    <string name="title_activity_delete_document">Удалить апостроф </string>
    <string name="title_activity_lock_unlock">Блокировка зон</string>
    <string name="title_activity_setting">Настройки</string>
    <string name="title_activity_warehouse">Склад</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_notification">Кол-во изменений</string>

    <string name="mainMenu_buttonRefresh">Обновить документ</string>
    <string name="mainMenu_buttonDelete">Удалить апостроф</string>
    <string name="mainMenu_buttonLockUnlock">Блокировка зон</string>
    <string name="mainMenu_buttonExit">Выйти</string>

    <string name="doc_textView_text">Укажите номера \n документов</string>
    <string name="doc_textView_error_in_DB">Произошла ошибка при \n работе с базой данных</string>
    <string name="doc_editText_hint">Введите здесь номера документов</string>
    <string name="doc_editText_no_docNumber">Не указан номер документа</string>
    <string name="doc_editText_wrong_docNumber"> - неверный номер документа</string>
    <string name="doc_editText_update_docNumber"> - обновлен</string>
    <string name="doc_editText_delete_docNumber"> - апостроф удален</string>
    <string name="doc_buttonBack">Вернутся</string>
    <string name="doc_buttonUpdate">Обновить</string>
    <string name="doc_buttonDelete">Удалить</string>
    <string name="doc_buttonRepeat">Повторить</string>

    <string name="lock_buttonRefresh">Обновить</string>

    <string name="serverName_default">Выберите сервер</string>
    <string name="serverName_home">Дом</string>
    <string name="serverName_work">Работа</string>
    <string name="serverName_other">Другой</string>

    <string name="dialog_IP_filter">0123456789.</string>
    <string name="dialog_buttonOk">Подтвердить</string>
    <string name="dialog_buttonCancel">Отмена</string>
    <string name="dialog_editText_hint">введите IP-адресс</string>
    <string name="dialog_editText_hint_noIp">Необходимо указать IP-адрес</string>
    <string name="dialog_title">Укажите IP-адрес сервера</string>
    <string name="dialog_title_wrongIp">Не верный формат IP-адреса</string>

    <string name="errorShow_negativeButton">Вернутся</string>
    <string name="errorShow_title">Произошла ошибка!</string>

    <string name="progressBar_title">Соединение…</string>
    <string name="progressBar_massage">Подождите, выполняется соединение с сервером</string>

    <string name="login_menu_forget">Забыть мои данные</string>
    <string name="login_menu_settings">Настройки</string>
    <string name="login_menu_headLine_height">Высота заголовка</string>
    <string name="login_menu_section_height">Высота секций</string>

    <string name="dialog_set_height_textView_prefix">"Высота секций = "</string>
    <string name="dialog_set_height_headLine_title">Установите высоту заголовка</string>
    <string name="dialog_set_height_section_title">Установите высоту секции</string>
    <string name="dialog_set_button_cancel_text">Отмена</string>
    <string name="dialog_set_button_save_text">Сохранить</string>

    <string name="preference_prefix_name">"com.alexzandr.myapplication."</string>
    <string name="preference_key_height_headLine">"com.alexzandr.myapplication.HEADLINE_HEIGHT"</string>
    <string name="preference_key_height_section">"com.alexzandr.myapplication.SECTION_HEIGHT"</string>
    <string name="preference_key_color_blocked">"com.alexzandr.myapplication.COLOR_BLOCKED"</string>
    <string name="preference_key_color_unblocked">"com.alexzandr.myapplication.COLOR_UNBLOCKED"</string>
    <string name="preference_key_color_both">"com.alexzandr.myapplication.COLOR_BOTH"</string>
    <string name="preference_key_color_notExists">"com.alexzandr.myapplication.COLOR_NOT_EXISTS"</string>

    <string name="default_color_blocked">#F44336</string>
    <string name="default_color_unblocked">#4CAF50</string>
    <string name="default_color_both">#FFEB3B</string>
    <string name="default_color_notExists">#9E9E9E</string>
    <integer name="default_height_headline">30</integer>
    <integer name="default_height_section">30</integer>

    <string name="color_preference_summary_text">".\nВыбор фонового цвета для секции."</string>
    <string name="color_preference_section_color">Настройки цвета</string>
    <string name="color_preference_section_height">Настройка высоты</string>
    <string name="color_preference_title_blocked">Цвет заблокированной секции</string>
    <string name="color_preference_title_unblocked">Цвет разблокированной секции</string>
    <string name="color_preference_title_both">Цвет смешанной секции</string>
    <string name="color_preference_title_notExists">Цвет отсутствующей секции</string>
    <string name="color_preference_positiveButton_text">Выбрать</string>

    <string name="height_preference_title_headline">"Высота заголовка - "</string>
    <string name="height_preference_title_section">"Высота секции - "</string>

    <string name="remember_preference_name">"com.alexzandr.myapplication.REMEMBER"</string>
    <string name="remember_preference_key_is_active">"com.alexzandr.myapplication.IS_ACTIVE"</string>
    <string name="remember_preference_key_user">"com.alexzandr.myapplication.USER"</string>
    <string name="remember_preference_key_password">"com.alexzandr.myapplication.PASSWORD"</string>

    <string name="blankFragment_text">"Ни один из элементов не был выбран! \n Выберите эелемент"</string>

    <string name="transfer_fragment_key">fragment</string>
    <string name="transfer_work_with_doc_type_key">type</string>

    <string name="error_msg_null_query">"Произошел разрыв связи с базой данных.\nНеобходимо повторно войти."</string>

    <string name="notification_text_prefix">"Кол-во выполненных изменений - "</string>
    <string name="notification_no_changes">"Изменения не были выполнены"</string>

    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <string-array name="color_preference_array_entry">
        <item>Красный</item>
        <item>Розовый</item>
        <item>Сиренивый</item>
        <item>Индиго</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Светло зеленый</item>
        <item>Лайм</item>
        <item>Amber</item>
        <item>Deep Orange</item>
        <item>Коричневый</item>
        <item>Оранжевый</item>
        <item>Желтый</item>
        <item>Зеленый</item>
        <item>Голубой</item>
        <item>Синий</item>
        <item>Фиолетовый</item>
        <item>Серый</item>
        <item>Blue Grey</item>
    </string-array>

    <string-array name="color_preference_array_values">
        <item>#F44336</item>
        <item>#E91E63</item>
        <item>#673AB7</item>
        <item>#3F51B5</item>
        <item>#00BCD4</item>
        <item>#009688</item>
        <item>#8BC34A</item>
        <item>#CDDC39</item>
        <item>#FFC107</item>
        <item>#FF5722</item>
        <item>#795548</item>
        <item>#FF9800</item>
        <item>#FFEB3B</item>
        <item>#4CAF50</item>
        <item>#03A9F4</item>
        <item>#2196F3</item>
        <item>#9C27B0</item>
        <item>#9E9E9E</item>
        <item>#607D8B</item>
    </string-array>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>