<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alexzandr.myapplication.activity.WarehouseActivity">

    <group
        android:id="@+id/menu_setting_group">
        <item
            android:id="@+id/login_menu_forget_me"
            android:title="@string/login_menu_forget"
            android:orderInCategory="100"
            app:showAsAction="never" />
        <item
            android:id="@+id/login_menu_settings"
            android:title="@string/login_menu_settings"
            android:orderInCategory="100"
            app:showAsAction="never" />

        <item
            android:id="@+id/login_menu_headLine_height"
            android:title="@string/login_menu_headLine_height"
            android:orderInCategory="100"
            app:showAsAction="never" />

        <item
            android:id="@+id/login_menu_section_height"
            android:title="@string/login_menu_section_height"
            android:orderInCategory="100"
            app:showAsAction="never" />
    </group>
</menu>
