<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_blue"
    tools:context="com.alexzandr.firstapplication.MainMenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/background_blue">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainMenu_buttonRefresh"
            android:textColor="@color/text_white"
            android:textSize="@dimen/button_text_size"
            android:id="@+id/mainMenu_buttonRefresh"
            android:layout_gravity="center"
            android:background="@color/background_blue"
            android:paddingTop="@dimen/mainMenu_buttonSpacing_top"
            android:paddingBottom="@dimen/mainMenu_buttonSpacing_bottom"
            android:onClick="updateClick"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainMenu_buttonDelete"
            android:textColor="@color/text_white"
            android:textSize="@dimen/button_text_size"
            android:id="@+id/mainMenu_buttonDelete"
            android:layout_gravity="center"
            android:background="@color/background_blue"
            android:paddingTop="@dimen/mainMenu_buttonSpacing_top"
            android:paddingBottom="@dimen/mainMenu_buttonSpacing_bottom"
            android:onClick="deleteClick" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainMenu_buttonLockUnlock"
            android:textColor="@color/text_white"
            android:textSize="@dimen/button_text_size"
            android:id="@+id/mainMenu_buttonLockUnlock"
            android:layout_gravity="center"
            android:background="@color/background_blue"
            android:paddingTop="@dimen/mainMenu_buttonSpacing_top"
            android:paddingBottom="@dimen/mainMenu_buttonSpacing_bottom"
            android:onClick="lockUnlockClick"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainMenu_buttonExit"
            android:textColor="@color/text_white"
            android:textSize="@dimen/button_text_size"
            android:id="@+id/mainMenu_buttonExit"
            android:layout_gravity="center"
            android:background="@color/background_blue"
            android:paddingTop="@dimen/mainMenu_buttonSpacing_top"
            android:paddingBottom="@dimen/mainMenu_buttonSpacing_bottom"
            android:onClick="exitClick"/>
    </LinearLayout>
</RelativeLayout>